Improving Gemba app

--- a/templates/gemba/downtime_user_view.html
+++ b/templates/gemba/downtime_user_view.html
@@ -6,61 +6,12 @@
     <strong>Info!</strong> You should <a href="{% url 'gemba_app:job-user-view' %}" class="alert-link">choose a job first!</a>
     </div>
 {% endif %}
-
-<div>
-    <p><a href="{% url 'gemba_app:pareto-ns-update-view' pk=pareto.pk %}">
+<p><a href="{% url 'gemba_app:pareto-ns-update-view' pk=pareto.pk %}">
         Not scheduled to run </a>- {{ pareto.not_scheduled_to_run }} min</p>
-    <br/>
-    <h6>General downtime reasons</h6>
-    <table class="table">
-        <thead>
-        <tr>
-            <th scope="col">Code & Description</th>
-            <th scope="col"></th>
-            <th scope="col"></th>
-            <th scope="col"></th>
-            <th scope="col"></th>
-        </tr>
-        </thead>
-        <tbody>
-    <tr>
-
-    {% for item in general_list|slice:"0:5" %}
-    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
-    {% endfor %}
-    </tr>
-    <tr>
-    {% for item in general_list|slice:"5:10" %}
-    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
-    {% endfor %}
-    </tr>
-    <tr>
-    {% for item in general_list|slice:"10:15" %}
-    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
-    {% endfor %}
-    </tr>
-    <tr>
-    {% for item in general_list|slice:"15:20" %}
-    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
-    {% endfor %}
-    </tr>
-    <tr>
-    {% for item in general_list|slice:"20:25" %}
-    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
-    {% endfor %}
-    </tr>
-    <tr>
-    {% for item in general_list|slice:"25:30" %}
-    <td><a href="{% url 'gemba_app:downtime-detail-create' pk=item.downtime.pk %}">{{ item.downtime }}</a></td>
-    {% endfor %}
-    </tr>
-        </tbody>
-    </table>
-</div>
 <div>
     <br/>
-    <h6>Bespoke reasons</h6>
-    <table class="table table-hover">
+    <h6>Downtime reasons</h6>
+    <table class="table table-bordered">
         <thead>
         <tr>
             <th scope="col">Code & Description</th>
