--- a/templates/gemba/pareto_before_close.html
+++ b/templates/gemba/pareto_before_close.html
@@ -14,6 +14,15 @@
     Operators: {{ pareto_list.ops }} - Available time: {{ available_time }} min - Not scheduled to run:
     {{ pareto_list.not_scheduled_to_run}} min</p>
 <p> Total Downtime: {{ downtime }} min </p>
+<h5 style="color: red;">{% if scrap_compare != 0 %}There is a mistake in your Pareto: Output: {{ output }} -
+    Good: {{ good }} = {{ scrap }}?! Should be {{ scrap|add:scrap_compare }}. Go back to Pareto sheet and fix it. {% endif %}</h5>
+<h5>{% if performance > 100 %} There is a mistake in your Pareto: {{ performance }} > 100%.
+    Please go back to Pareto sheet and fix it.{% endif %}</h5>
+<h5>{% if performance < 80 %} Possibly, there is a mistake in your Pareto: {{ performance }} < 80%.
+    Please go back to Pareto sheet and check it.{% endif %}</h5>
+<h5>{% if quality == 100 %} Possibly, there is a mistake in your Pareto: {{quality }} == 100%.
+    Please go back to Pareto sheet and check it.{% endif %}</h5>
+
 <div>
     <div class = "row">
     <div class = "col">
