--- a/templates/gemba/scrap_user_view.html
+++ b/templates/gemba/scrap_user_view.html
@@ -6,52 +6,10 @@
     <strong>Info!</strong> You should <a href="{% url 'gemba_app:job-user-view' %}" class="alert-link">choose a job first!</a>
     </div>
 {% endif %}
+
 <div>
     <br/>
-    <h6>General scrap reasons</h6>
-    <table class="table">
-        <thead>
-        <tr>
-            <th scope="col">Code & Description</th>
-            <th scope="col"></th>
-            <th scope="col"></th>
-            <th scope="col"></th>
-            <th scope="col"></th>
-        </tr>
-        </thead>
-        <tbody>
-    <tr>
-    {% for item in general_list|slice:"0:5" %}
-    <td><a href="{% url 'gemba_app:scrap-detail-create' pk=item.scrap.pk %}">{{ item.scrap }}</a></td>
-    {% endfor %}
-    </tr>
-    <tr>
-    {% for item in general_list|slice:"5:10" %}
-    <td><a href="{% url 'gemba_app:scrap-detail-create' pk=item.scrap.pk %}">{{ item.scrap }}</a></td>
-    {% endfor %}
-    </tr>
-    <tr>
-    {% for item in general_list|slice:"10:15" %}
-    <td><a href="{% url 'gemba_app:scrap-detail-create' pk=item.scrap.pk %}">{{ item.scrap }}</a></td>
-    {% endfor %}
-    </tr>
-        <tr>
-    {% for item in general_list|slice:"16:20" %}
-    <td><a href="{% url 'gemba_app:scrap-detail-create' pk=item.scrap.pk %}">{{ item.scrap }}</a></td>
-    {% endfor %}
-    </tr>
-        <tr>
-    {% for item in general_list|slice:"21:25" %}
-    <td><a href="{% url 'gemba_app:scrap-detail-create' pk=item.scrap.pk %}">{{ item.scrap }}</a></td>
-    {% endfor %}
-    </tr>
-        </tbody>
-    </table>
-</div>
-<div>
-    <br/>
-    <h6>Bespoke reasons</h6>
-    <table class="table table-hover">
+    <table class="table table-bordered">
         <thead>
         <tr>
             <th scope="col">Code & Description</th>
