Table to display tools

--- a/templates/tools/index.html
+++ b/templates/tools/index.html
@@ -4,4 +4,5 @@
         <p><a href="{% url 'tools_app:returning' %}">Tool change operations</a></p>
         <p><a href="{% url 'tools_app:in-use' %}">Tools in use</a></p>
         <p><a href="{% url 'tools_app:machines' %}">Tools vs Jobs</a></p>
+        <p><a href="{% url 'tools_app:tools-machines' %}">Tools used on the machine</a></p>
 {% endblock %}
