--- a/templates/tools/return.html
+++ b/templates/tools/return.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 {% block content %}
     {% if request.user.is_staff %}
-    <div><a href="{% url 'tools_app:select-machine' %}">
+    <div><a href="{% url 'tools_app:operation-update-view' %}">
     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Change tool
     </button></a>
     </div>
