--- a/templates/gemba/pareto_details.html
+++ b/templates/gemba/pareto_details.html
@@ -3,7 +3,6 @@
 {% load mathfilters %}
 
 <h4>Pareto Detail View</h4>
-<div>
 <table class="table table-hover">
         <thead>
         <tr>
@@ -68,6 +67,7 @@
         </tbody>
     </table>
 
+<div>
 <div class = "row">
 <div class = "col">
     <table class="table table-hover">
@@ -128,8 +128,13 @@
     <div class = "col">
 </div>
 </div>
+</div>
 
+<div class = "row">
+  <div class = "col">
 <p><a href="{% url 'gemba_app:tableau' pk=10 %}">
 <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Export Tableau file
 </button></a></p>
+    </div>
+</div>
 {% endblock %}
