--- a/templates/gemba/pareto_details.html
+++ b/templates/gemba/pareto_details.html
@@ -132,7 +132,7 @@
 
 <div class = "row">
   <div class = "col">
-<p><a href="{% url 'gemba_app:tableau' pk=10 %}">
+<p><a href="{% url 'gemba_app:tableau' pk=pareto_list.id %}">
 <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Export Tableau file
 </button></a></p>
     </div>
