Improving Tableau Export

--- a/templates/gemba/daily_oee_report.html
+++ b/templates/gemba/daily_oee_report.html
@@ -33,6 +33,6 @@
         </tbody>
 </table>
 <div><a href="{% url 'gemba_app:export_daily_oee_report' %}?{{request.GET.urlencode}}">
-<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Export to CSV
+<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Export to Excel file
 </button></a></div>
 {% endblock %}
