--- a/templates/gemba/downtimes_view.html
+++ b/templates/gemba/downtimes_view.html
@@ -7,25 +7,27 @@
 <table class="table table-hover">
         <thead>
         <tr>
-            <th scope="col">Date</th>
+            <th scope="col">Time stamp</th>
             <th scope="col">User / Line</th>
             <th scope="col">Downtime Reason</th>
             <th scope="col">Minutes</th>
             <th scope="col">Frequency</th>
             <th scope="col">Job</th>
             <th scope="col">Pareto ID</th>
+            <th scope="col">Pareto Date</th>
         </tr>
         </thead>
         <tbody>
         {% for object in today_downtimes %}
             <tr>
-                <td>{{ object.pareto_date }}</td>
+                <td>{{ object.datetime}}</td>
                 <td>{{ object.user }}</td>
                 <td>{{ object.downtime }}</td>
                 <td>{{ object.minutes }}</td>
                 <td>{{ object.frequency }}</td>
                 <td>{{ object.job }}</td>
                 <td>{{ object.pareto_id }}</td>
+                <td>{{ object.pareto_date }}</td>
            {% endfor %}
             </tr>
         </tbody>
