--- a/templates/gemba/downtimes_view.html
+++ b/templates/gemba/downtimes_view.html
@@ -7,7 +7,7 @@
 <table class="table table-hover">
         <thead>
         <tr>
-            <th scope="col">Time stamp</th>
+            <th scope="col">Last Entry</th>
             <th scope="col">User / Line</th>
             <th scope="col">Downtime Reason</th>
             <th scope="col">Minutes</th>
@@ -20,7 +20,7 @@
         <tbody>
         {% for object in today_downtimes %}
             <tr>
-                <td>{{ object.datetime}}</td>
+                <td>{{ object.datetime|date:'d-m-Y H:i'}}</td>
                 <td>{{ object.user }}</td>
                 <td>{{ object.downtime }}</td>
                 <td>{{ object.minutes }}</td>
