--- a/templates/gemba/scraps_search.html
+++ b/templates/gemba/scraps_search.html
@@ -5,23 +5,25 @@
 <table class="table table-hover">
         <thead>
         <tr>
-            <th scope="col">Date</th>
+            <th scope="col">Last Entry</th>
             <th scope="col">User / Line</th>
             <th scope="col">Scrap Reason</th>
             <th scope="col">Qty</th>
             <th scope="col">Job</th>
             <th scope="col">Pareto ID</th>
+            <th scope="col">Pareto Date</th>
         </tr>
         </thead>
         <tbody>
         {% for object in object_list %}
             <tr>
-                <td>{{ object.pareto_date }}</td>
+                <td>{{ object.datetime|date:'d-m-Y H:i'}}</td>
                 <td>{{ object.user }}</td>
                 <td>{{ object.scrap }}</td>
                 <td>{{ object.qty }}</td>
                 <td>{{ object.job }}</td>
                 <td>{{ object.pareto_id }}</td>
+                <td>{{ object.pareto_date }}</td>
            {% endfor %}
             </tr>
         </tbody>
