--- a/templates/gemba/pareto_final_qs_before_close.html
+++ b/templates/gemba/pareto_final_qs_before_close.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-Are you sure you want to finish Pareto? In case of mistake contact with data administrator.
+Are you sure you want to complete Pareto? In case of mistake contact with data administrator.
 <br/>
 <br/>
 <a href="{% url 'gemba_app:close-pareto' %}">
