--- a/templates/gemba/downtimes_view.html
+++ b/templates/gemba/downtimes_view.html
@@ -18,7 +18,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for object in today_downtimes %}
+        {% for object in page_obj %}
             <tr>
                 <td>{{ object.datetime|date:'d-m-Y H:i'}}</td>
                 <td>{{ object.user }}</td>
@@ -32,5 +32,21 @@
             </tr>
         </tbody>
     </table>
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
 
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 {% endblock %}
