--- a/templates/gemba/form.html
+++ b/templates/gemba/form.html
@@ -1,16 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
 
-<table class="table">
+<table class="table table-table">
         <thead>
         <tr>
             <th scope="col">Previous Output</th>
-            <th scope="col">Previous Good</th>
         </tr>
         </thead>
         <tbody>
         <tr>
             <td>{{ total_output }}</td>
+        </tr>
+        </tbody>
+        </table>
+
+<table class="table table-table">
+        <thead>
+        <tr>
+            <th scope="col">Previous Good</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
             <td>{{ total_good }}</td>
         </tr>
         </tbody>
