--- a/templates/gemba/pareto_view.html
+++ b/templates/gemba/pareto_view.html
@@ -11,7 +11,7 @@ Select a date
         <thead>
         <tr>
           <th scope="col">Date</th>
-            <th scope="col">Line / User</th>
+            <th scope="col">Line</th>
             <th scope="col">Shift</th>
             <th scope="col">Job OTG/End</th>
             <th scope="col">Availability</th>
@@ -24,7 +24,7 @@ Select a date
         {% for item in report_list %}
         <tr>
             <td><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.date|date:"d-m-Y" }}</a></td>
-            <td>{{ item.user }}</td>
+            <td>{{ item.line }}</td>
             <td>{{ item.shift }}</td>
             <td>{% if item.job_otg is None %} ----- {% else %} {{ item.job_otg }} {% endif %}</td>
             <td>{{ item.availability }}%</td>
