--- a/templates/gemba/scraps_search.html
+++ b/templates/gemba/scraps_search.html
@@ -15,7 +15,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for object in object_list %}
+        {% for object in page_obj %}
             <tr>
                 <td>{{ object.datetime|date:'d-m-Y H:i'}}</td>
                 <td>{{ object.user }}</td>
@@ -28,6 +28,24 @@
             </tr>
         </tbody>
     </table>
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
+<br/>
 <div><a href="{% url 'gemba_app:export-scrap-csv' %}?{{request.GET.urlencode}}">
 <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Export to CSV
 </button></a></div>
